--- a/index.html
+++ b/index.html
@@ -435,23 +435,23 @@
                                                         <div class="col" style="padding-top: 24px;">
                                                             <div id="tools"
                                                                 style="display: grid;justify-content: center;height:67vh; overflow-y: auto;scroll-behavior: smooth;">
-                                                                <img title="figma" src="/tools/figma.svg" alt="">
-                                                                <img title="framer" src="/tools/framer.svg" alt="">
-                                                                <img title="adobe Xd" src="/tools/xd.svg" alt="">
-                                                                <img title="adobe illustrator" src="/tools/ai.svg"
+                                                                <img title="figma" src="figma.svg" alt="">
+                                                                <img title="framer" src="framer.svg" alt="">
+                                                                <img title="adobe Xd" src="xd.svg" alt="">
+                                                                <img title="adobe illustrator" src="ai.svg"
                                                                     alt="">
-                                                                <img title="adobe photoshop" src="/tools/ps.svg" alt="">
-                                                                <img title="adobe after effects" src="/tools/ae.svg"
+                                                                <img title="adobe photoshop" src="ps.svg" alt="">
+                                                                <img title="adobe after effects" src="ae.svg"
                                                                     alt="">
-                                                                <img title="adobe indesign" src="/tools/id.svg" alt="">
-                                                                <img title="adobe premier pro" src="/tools/pr.svg"
+                                                                <img title="adobe indesign" src="id.svg" alt="">
+                                                                <img title="adobe premier pro" src="pr.svg"
                                                                     alt="">
-                                                                <img title="html5" src="/tools/html.svg" alt="">
-                                                                <img title="css" src="/tools/css.svg" alt="">
-                                                                <img title="javascript" src="/tools/js.svg" alt="">
-                                                                <img title="bootstap" src="/tools/b5.svg" alt="">
-                                                                <img title="procreate" src="/tools/pcrt.svg" alt="">
-                                                                <img title="cinema 4d" src="/tools/c4d.svg" alt="">
+                                                                <img title="html5" src="html.svg" alt="">
+                                                                <img title="css" src="css.svg" alt="">
+                                                                <img title="javascript" src="js.svg" alt="">
+                                                                <img title="bootstap" src="b5.svg" alt="">
+                                                                <img title="procreate" src="pcrt.svg" alt="">
+                                                                <img title="cinema 4d" src="c4d.svg" alt="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1040,20 +1040,20 @@
                                                    
                                                     <div id="toolimg1" class="row row-cols-5 row-cols-md-6 g-4"
                                                         style="padding: 0 5px 25px 5px;">
-                                                        <img title="figma" src="/tools/figma.svg" alt="">
-                                                        <img title="framer" src="/tools/framer.svg" alt="">
-                                                        <img title="adobe Xd" src="/tools/xd.svg" alt="">
-                                                        <img title="adobe illustrator" src="/tools/ai.svg" alt="">
-                                                        <img title="adobe photoshop" src="/tools/ps.svg" alt="">
-                                                        <img title="adobe after effects" src="/tools/ae.svg" alt="">
-                                                        <img title="adobe indesign" src="/tools/id.svg" alt="">
-                                                        <img title="adobe premier pro" src="/tools/pr.svg" alt="">
-                                                        <img title="html5" src="/tools/html.svg" alt="">
-                                                        <img title="css" src="/tools/css.svg" alt="">
-                                                        <img title="javascript" src="/tools/js.svg" alt="">
-                                                        <img title="bootstap" src="/tools/b5.svg" alt="">
-                                                        <img title="procreate" src="/tools/pcrt.svg" alt="">
-                                                        <img title="cinema 4d" src="/tools/c4d.svg" alt="">
+                                                        <img title="figma" src="figma.svg" alt="">
+                                                        <img title="framer" src="framer.svg" alt="">
+                                                        <img title="adobe Xd" src="xd.svg" alt="">
+                                                        <img title="adobe illustrator" src="ai.svg" alt="">
+                                                        <img title="adobe photoshop" src="ps.svg" alt="">
+                                                        <img title="adobe after effects" src="ae.svg" alt="">
+                                                        <img title="adobe indesign" src="id.svg" alt="">
+                                                        <img title="adobe premier pro" src="pr.svg" alt="">
+                                                        <img title="html5" src="html.svg" alt="">
+                                                        <img title="css" src="css.svg" alt="">
+                                                        <img title="javascript" src="js.svg" alt="">
+                                                        <img title="bootstap" src="b5.svg" alt="">
+                                                        <img title="procreate" src="pcrt.svg" alt="">
+                                                        <img title="cinema 4d" src="c4d.svg" alt="">
                                                     </div>
                                                 </div>
                                             </div>
