--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="portfolio.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/maximum-impact" rel="stylesheet">
+
 
 </head>
 
@@ -91,12 +93,15 @@
                                                 PORTFOLIO</h1>
                                         </a>
                                         <div id="iconset_mob"
-                                            style=" display: flex;justify-content: space-evenly;margin-top: 20px;width: 70vw;height: 15vw;border-radius: 20px; background-color: var(--body);">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-linkedin"
-                                                viewBox="0 0 16 16">
-                                                <path
-                                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
-                                            </svg>
+                                            style=" display: flex;align-items: center; justify-content: space-evenly;margin-top: 20px;width: 70vw;height: 15vw;border-radius: 20px; background-color: var(--body);">
+                                            <a style="text-decoration: none;"
+                                                href="https://www.linkedin.com/in/muhammed-nisar-a954611b2/">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-linkedin"
+                                                    viewBox="0 0 16 16">
+                                                    <path
+                                                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                                                </svg>
+                                            </a>
                                             <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-behance"
                                                 viewBox="0 0 16 16">
                                                 <path
@@ -148,11 +153,15 @@
 
 
                         <div id="iconset" style="align-items: center;margin-left: 4vw;">
-                            
-                            <svg style="border-radius: 3px;" xmlns="http://www.w3.org/2000/svg" class="bi bi-linkedin" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
-                            </svg>
+
+                            <a style="text-decoration: none;"
+                                href="https://www.linkedin.com/in/muhammed-nisar-a954611b2/">
+                                <svg style="border-radius: 3px;" xmlns="http://www.w3.org/2000/svg"
+                                    class="bi bi-linkedin" viewBox="0 0 16 16">
+                                    <path
+                                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                                </svg>
+                            </a>
                             <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-behance" viewBox="0 0 16 16">
                                 <path
                                     d="M4.654 3c.461 0 .887.035 1.278.14.39.07.711.216.996.391.286.176.497.426.641.747.14.32.216.711.216 1.137 0 .496-.106.922-.356 1.242-.215.32-.566.606-.997.817.606.176 1.067.496 1.348.922.281.426.461.957.461 1.563 0 .496-.105.922-.285 1.278a2.317 2.317 0 0 1-.782.887c-.32.215-.711.39-1.137.496a5.329 5.329 0 0 1-1.278.176L0 12.803V3h4.654zm-.285 3.978c.39 0 .71-.105.957-.285.246-.18.355-.497.355-.887 0-.216-.035-.426-.105-.567a.981.981 0 0 0-.32-.355 1.84 1.84 0 0 0-.461-.176c-.176-.035-.356-.035-.567-.035H2.17v2.31c0-.005 2.2-.005 2.2-.005zm.105 4.193c.215 0 .426-.035.606-.07.176-.035.356-.106.496-.216s.25-.215.356-.39c.07-.176.14-.391.14-.641 0-.496-.14-.852-.426-1.102-.285-.215-.676-.32-1.137-.32H2.17v2.734h2.305v.005zm6.858-.035c.286.285.711.426 1.278.426.39 0 .746-.106 1.032-.286.285-.215.46-.426.53-.64h1.74c-.286.851-.712 1.457-1.278 1.848-.566.355-1.243.566-2.06.566a4.135 4.135 0 0 1-1.527-.285 2.827 2.827 0 0 1-1.137-.782 2.851 2.851 0 0 1-.712-1.172c-.175-.461-.25-.957-.25-1.528 0-.531.07-1.032.25-1.493.18-.46.426-.852.747-1.207.32-.32.711-.606 1.137-.782a4.018 4.018 0 0 1 1.493-.285c.606 0 1.137.105 1.598.355.46.25.817.532 1.102.958.285.39.496.851.641 1.348.07.496.105.996.07 1.563h-5.15c0 .58.21 1.11.496 1.396zm2.24-3.732c-.25-.25-.642-.391-1.103-.391-.32 0-.566.07-.781.176-.215.105-.356.25-.496.39a.957.957 0 0 0-.25.497c-.036.175-.07.32-.07.46h3.196c-.07-.526-.25-.882-.497-1.132zm-3.127-3.728h3.978v.957h-3.978v-.957z" />
@@ -644,7 +653,7 @@
                                                                         d="M6.23109 0C4.51934 0 3.25266 1.52253 3.30937 3.17368C3.36387 4.75992 3.29309 6.81453 2.78414 8.48997C2.27367 10.1703 1.41023 11.2347 0 11.3714V12.9143C1.41023 13.051 2.27367 14.1154 2.78414 15.7959C3.29309 17.4713 3.36387 19.5257 3.30937 21.112C3.25266 22.7629 4.51934 24.2857 6.23133 24.2857H23.7711C25.483 24.2857 26.7493 22.7632 26.6926 21.112C26.6382 19.5258 26.7089 17.4713 27.2179 15.7959C27.7287 14.1155 28.5898 13.0509 30 12.9143V11.3714C28.5898 11.2347 27.7287 10.1703 27.218 8.48997C26.7089 6.81477 26.6382 4.76004 26.6926 3.17368C26.7493 1.52277 25.483 0 23.7711 0H6.23086H6.23109ZM20.3391 14.9494C20.3391 17.223 18.6703 18.6018 15.9009 18.6018H11.1865C11.0516 18.6018 10.9223 18.5473 10.827 18.4504C10.7317 18.3535 10.6781 18.2221 10.6781 18.0851V6.20064C10.6781 6.13277 10.6913 6.06557 10.7168 6.00286C10.7423 5.94016 10.7798 5.88318 10.827 5.83519C10.8742 5.78719 10.9303 5.74912 10.992 5.72314C11.0537 5.69717 11.1198 5.6838 11.1866 5.6838H15.874C18.1832 5.6838 19.6986 6.95506 19.6986 8.90666C19.6986 10.2765 18.6791 11.5029 17.3803 11.7176V11.7892C19.1486 11.9863 20.3391 13.2306 20.3391 14.9494ZM15.3867 7.32185H12.6988V11.1803H14.9629C16.7129 11.1803 17.6781 10.4641 17.6781 9.1839C17.6781 7.98433 16.848 7.32185 15.3867 7.32185ZM12.6988 12.7113V16.9633H15.4857C17.3078 16.9633 18.2732 16.2203 18.2732 14.8239C18.2732 13.4272 17.2809 12.711 15.3686 12.711H12.6988V12.7113Z"
                                                                         fill="#7E13F8" />
                                                                 </svg>
-                                                                
+
 
                                                                 <svg width="30" height="30" viewBox="0 0 30 30"
                                                                     fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -1132,11 +1141,14 @@
                                                                     </span> you can feel it.</p>
                                                                 <div id="smiconintro"
                                                                     style="justify-content: space-between;margin-top: 20px;width: 48vw;height: 25px;">
-                                                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                                                        class="bi bi-linkedin" viewBox="0 0 16 16">
-                                                                        <path
-                                                                            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
-                                                                    </svg>
+                                                                    <a style="text-decoration: none;"
+                                                                        href="https://www.linkedin.com/in/muhammed-nisar-a954611b2/">
+                                                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                                                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                                                                            <path
+                                                                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                                                                        </svg>
+                                                                    </a>
                                                                     <svg xmlns="http://www.w3.org/2000/svg"
                                                                         class="bi bi-behance" viewBox="0 0 16 16">
                                                                         <path
