--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body
-    style="font-family: poppins; height: 100vh;width: 100vw;overflow-x: hidden;background-color:var(--body);user-select: none;">
+    style="font-family: railway; height: 100vh;width: 100vw;overflow-x: hidden;background-color:var(--body);user-select: none;">
 
 
     <div id="preloader"></div>
@@ -76,7 +76,7 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body"
-                                    style="border-radius: 20px;width: 100%; background-color:white;display: flex;align-items: center;justify-content: center;flex-direction: column;height: 100%;">
+                                    style=" border-radius: 20px;width: 100%; background-color:white;display: flex;align-items: center;justify-content: center;flex-direction: column;height: 100%;">
                                     <div style="text-align: left;display: flex;align-items: center;flex-direction: column;
                                         font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
                                         <div
@@ -1591,7 +1591,7 @@
                                                                 <ul class="timeline " id="timeline">
                                                                     <li class="timeline-item mb-3">
                                                                         <h5
-                                                                            style="font-size: 16px;font-weight: 500;color: var(--smicon);">
+                                                                            style="font-size: 14px;font-weight: 500;color: var(--smicon);">
                                                                             Desglobal
                                                                         </h5>
                                                                         <p class=" mb-2 "
@@ -1630,7 +1630,7 @@
                                                                     <li class="timeline-item mb-3">
 
                                                                         <h5
-                                                                            style="font-size: 16px;font-weight: 500;color: var(--smicon);">
+                                                                            style="font-size: 14px;font-weight: 500;color: var(--smicon);">
                                                                             Cocoshoppy
                                                                         </h5>
                                                                         <p class=" mb-2 "
@@ -1666,7 +1666,7 @@
                                                                     </li>
                                                                     <li class="timeline-item mb-4">
                                                                         <h5
-                                                                            style="font-size: 16px;font-weight: 500;color: var(--smicon);">
+                                                                            style="font-size: 14px;font-weight: 500;color: var(--smicon);">
                                                                             Freelancer</h5>
                                                                         <p class=" mb-2 "
                                                                             style="font-size: 12px;color: var(--para);font-weight: 300;">
@@ -1724,7 +1724,7 @@
 
                                                                 </div>
                                                                 <div>
-                                                                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                                                                    <div class="row row-cols-1 row-cols-md-2 g-3">
                                                                         <div class="col">
                                                                             <div class="card">
                                                                                 <img src="https://miro.medium.com/v2/resize:fit:1000/0*2v-vAaNyzItuRiu8"
