--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                                             style="display: flex;align-items: center;">
                                                             <div style="color: var(--smicon);">
                                                                 <p
-                                                                    style="font-size: 24px;padding:0 33px 33px 0;margin: 0;">
+                                                                    style="font-size: 1.6vw;padding:0 33px 33px 0;margin: 0;">
                                                                     <span style="line-height: 3;" id="smile">Hey
                                                                         ,</span>
                                                                     <br>
@@ -276,7 +276,7 @@
                                                                         id="smile">creative
                                                                         smile</span> ?
                                                                 </p>
-                                                                <p style="font-size: 16px;"> <span><a
+                                                                <p style="font-size: 1vw;"> <span><a
                                                                             style="font-size: medium;color: var(--main);"
                                                                             href="javascript: document.body.scrollIntoView(false);">View
                                                                             my portfolio</a>
@@ -298,7 +298,7 @@
                                                         style="display: flex;flex-direction: column;justify-content: center;">
                                                         <div class="col-sm-3"
                                                             style=" display: flex; padding:33px 50px 0 35px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                            <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">About
+                                                            <p style="margin: 0;font-size: 16px;font-weight: 700;color: var(--smicon);">About
                                                             </p>
                                                             <p style="color: var(--scroll);margin: 0;">scroll</p>
 
@@ -390,7 +390,7 @@
                                         <div class="col">
                                             <div class="col-sm-3"
                                                 style=" display: flex; padding:33px 50px 0 25px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">Education
+                                                <p style="margin: 0;font-size: 16px;font-weight: 700;color: var(--smicon);">Education
                                                 </p>
 
 
@@ -414,7 +414,7 @@
                                         <div class="col">
                                             <div class="col-sm-3"
                                                 style=" display: flex; padding:33px 50px 0 25px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">Contact
+                                                <p style="margin: 0;font-size: 16px;font-weight: 700;color: var(--smicon);">Contact
                                                 </p>
 
 
@@ -444,7 +444,7 @@
                                         <div class="col">
                                             <div class="col-sm-3"
                                                 style=" display: flex; padding:33px 50px 0 25px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">Worked companies
+                                                <p style="margin: 0;font-size: 16px;font-weight: 700;color: var(--smicon);">Worked companies
                                                     &#10084
                                                 </p>
 
@@ -518,7 +518,7 @@
                                                     <div class="row "
                                                         style="height: 100%;display: flex;flex-direction: column;justify-content: center;">
                                                         <div class="col-sm-3"
-                                                            style="padding-top: 33px;font-size: 16px;width: 100%;text-align: center;font-weight: 500;color: var(--smicon);">
+                                                            style="padding-top: 33px;font-size: 16px;width: 100%;text-align: center;font-weight: 700;color: var(--smicon);">
                                                             Tools</div>
                                                         <div class="col" style="padding-top: 24px;">
                                                             <div id="tools"
@@ -808,7 +808,7 @@
                                                         style="height: 100%;display: flex;flex-direction: column;justify-content: center;">
                                                         <div class="col-sm-3"
                                                             style=" display: flex; padding:33px 50px 0 35px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                            <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">
+                                                            <p style="margin: 0;font-size: 16px;font-weight: 700;color: var(--smicon);">
                                                                 Experience</p>
                                                             <p style="color: var(--scroll);margin: 0;">scroll</p>
                                                         </div>
@@ -956,7 +956,7 @@
                                                         style="height: 100%;display: flex;flex-direction: column;justify-content: center;">
                                                         <div class="col-sm-3"
                                                             style=" display: flex; padding:33px 50px 0 35px;justify-content: space-between; font-size: 16px;width: 100%;font-weight: 400;">
-                                                            <p style="margin: 0;font-size: 16px;font-weight: 500;color: var(--smicon);">
+                                                            <p style="margin: 0;font-size: 1rem;font-weight: 700;color: var(--smicon);">
                                                                 Portfolio</p>
                                                             <p style="color: var(--scroll);margin: 0;">scroll</p>
 
