--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                                                             Tools</div>
                                                         <div class="col" style="padding-top: 24px;">
                                                             <div id="tools"
-                                                                style="display: grid;justify-content: center;height:67vh; overflow-y: auto;scroll-behavior: smooth;">
+                                                                style="padding-top: 15px; display: grid;justify-content: center;height:67vh; overflow-y: auto;scroll-behavior: smooth;">
                                                                 <svg width="1.875vw" height="2.857vw" viewBox="0 0 26 40"
                                                                     fill="none" xmlns="http://www.w3.org/2000/svg">
                                                                     <title>figma</title>
