--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 style="display: flex;align-items: center;justify-content: center;z-index: 10;">
                 <div class="row" id="headerhight">
                     <div class="col-xl-4 col-4 " style="display: flex;align-items: center;">
-                        <a href="#"><img src="logo.svg" alt=""></a>
+                        <a href="#"><img style="height: 2.142vw;width: auto;" src="logo.svg" alt=""></a>
                     </div>
                     <div class="col-xl-8 col-8 " style="display: flex;align-items: center;justify-content: end;">
                         <div>
                             <button id="btn_download" onclick="location.href='nisar_resume.pdf';"
                                 style="border: none; border-radius: 30PX; align-items: center;justify-content: center;padding: 12px 40px;">
-                                <img id="Download" src="download.svg" alt="" style="height: 15px;">
-                                <p style="font-size: 14px;font-weight: 400;margin: 0;margin-left: 10px;color: white;">
+                                <img id="Download" src="download.svg" alt="" style="height: 1vw;width: auto;">
+                                <p style="font-size: 1vw;font-weight: 400;margin: 0;margin-left: 10px;color: white;">
                                     <span id="download">Download</span> my resume
                                 </p>
                             </button>
