--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                                                         smile</span> ?
                                                                 </p>
                                                                 <p style="font-size: 1vw;"> <span><a
-                                                                            style="font-size: medium;color: var(--main);"
+                                                                            style="color: var(--main);"
                                                                             href="javascript: document.body.scrollIntoView(false);">View
                                                                             my portfolio</a>
                                                                     </span> you can feel it.</p>
