--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                         <div id="iconset" style="align-items: center;margin-left: 4vw;">
 
-                            <a style="text-decoration: none;"
+                            <a style="text-decoration: none;" target="_blank"
                                 href="https://www.linkedin.com/in/muhammed-nisar-a954611b2/">
                                 <svg style="border-radius: 3px;" xmlns="http://www.w3.org/2000/svg"
                                     class="bi bi-linkedin" viewBox="0 0 16 16">
